New test added to improve test coverage.